--- a/forgot-pass.html
+++ b/forgot-pass.html
@@ -15,8 +15,8 @@
         <form class="login-form">
             <input type="password" placeholder="New Password">
             <input type="password" placeholder="re-enter New Password">
-            <a href="index.html">Back to Login page</a>
-            <button href="index.html" type="submit">Reset</button>
+            <a href="login.html">Back to Login page</a>
+            <button href="#submit" type="submit">Reset</button>
         </form>
     </div>
 </body>
