--- a/index.html
+++ b/index.html
@@ -3,22 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link  rel="stylesheet" href="style.css" type="text/css" >
-    <title>Login</title>
-   
+    <link  rel="stylesheet" href="stylemainpg.css" type="text/css" >
+    <title>Main</title>
 </head>
 <body>
-    <div class="login-card">
-        <h2>Login</h2>
-        <h4>Enter your credentials</h4>
-
-        <form class="login-form">
-            <input type="text" placeholder="Username">
-            <input type="password" placeholder="Password">
-            <a href="forgot-pass.html">Forget your password?</a>
-            <button type="submit">LOGIN</button>
-        </form>
+    <div class="header1">
+         <h1>Hello, I'm Wasif Hassan!</h1>
+            <h2>Welcome to my Index page</h2>
+            <h4><a href="login.html">Link to Login page</a></h4>
+            
     </div>
-    
+
+    <div class="upperside">
+        <p><a href="login.html">Login</a>
+           </p>
+    </div>
 </body>
 </html>
