--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <div class="header1">
          <h1>Hello, I'm Wasif Hassan!</h1>
             <h2>Welcome to my Index page</h2>
-            <h4><a href="login.html">Link to Login page</a></h4>
+            <h4>Link to Login page on the top right corner!</h4>
             
     </div>
 
     <div class="upperside">
-        <p><a href="login.html">Login</a>
-           </p>
+        <button type="submit" > <a href = "login.html">Login</a> </button>
+           
     </div>
 </body>
 </html>
